...
    <string name="app_title">Birds of a Feather</string>
    <string name="default_person_text">Missing person!</string>
    <string name="title_activity_person_detail">PersonDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back">Go Back</string>
    <string name="first_name">First Name</string>
...
    <!-- Strings for add classes activity -->
    <string name="add_your_classes">Add Classes</string>
    <string name="edit_your_classes">Edit Class</string>
    <string name="current_added_classes">Added Classes:</string>
    <string name="add_another_class">Add another Class</string>
    <string name="btn_confirm">Add</string>
    <string name="btn_confirm_2">Confirm</string>
    <string name="btn_finish">Finish!</string>
    <string name="btn_done">Done</string>

    <!-- Strings for dialog box -->
    <string name="error_title">Alert!</string>
    <string name="error_message_1">Make sure to enter in all of the fields!</string>
...
