...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/textbox_margin"
        android:layout_marginEnd="@dimen/textbox_margin"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintBottom_toTopOf="@id/login_btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/login_btn_google"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
...
            android:isScrollContainer="true"
            app:layout_constraintTop_toBottomOf="@id/login_btn_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/login_field_firstname"
            style="@style/bof_textbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/first_name"
            app:layout_constraintBottom_toBottomOf="parent"
...
